# markdown-manager

./: .blackignore  .dockerignore  .env.example  .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  API_RESTRUCTURE_PLAN.md  AUTH_REFACTORING_SUMMARY.md  CLEANUP_COMPLETE.md  CONTRIBUTING.md  DATABASE_APPROACHES.md  DEVELOPMENT.md  DOCUMENT_CONSOLIDATION_COMPLETE.md  DOCUMENT_CONSOLIDATION_SUMMARY.md  DOCUMENT_MANAGEMENT.md  Dockerfile.backend  DocumentService.js  ICON_API_REFACTOR.md  KHIN_DOCUMENT_ANALYSIS.md  LICENSE  MFA_IMPLEMENTATION_SUMMARY.md  Makefile  Makefile_docker  README.md  SAVE_SYSTEM_REFACTOR.md  TESTING_GUIDE.md  TODO.md  databricks.yml  debug-config.js  deploy.config.js  deploy.sh  dev.sh  diagrams-export-implementation-plan.md  docker-compose.app.yml  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  documentUI.js  (+21 more)
backend/: Dockerfile  PDF_ARCHITECTURE.md  README.md  alembic.ini  check_mfa.py  cleanup_orphaned_github_docs.py  fix_mfa_inconsistency.py  markdown-manager-api.service  markdown_manager.db  mypy.txt  pyproject.toml
backend/app/: __init__.py  app_factory.py  database.py  main.py
backend/app/configs/: __init__.py  constants.py  environment.py  models.py  settings.py
backend/app/core/: auth.py  config.py  github_security.py  mfa.py
backend/app/crud/: __init__.py  category.py  custom_dictionary.py  document.py  document_recovery.py  github_crud.py  user.py
backend/app/middleware/: error_handling.py  logging.py  monitoring.py  request_context.py
backend/app/models/: __init__.py  base.py  category.py  custom_dictionary.py  document.py  document_recovery.py  git_operations.py  github_models.py  github_settings.py  icon_models.py  markdown_lint_rule.py  user.py
backend/app/routers/: admin.py  auth.py  auth_backup.py  categories.py  custom_dictionary.py  default.py  documents.py  github.py  github_settings.py  github_sync.py  health.py  iconify_router.py  icons.py  markdown_lint.py  monitoring.py  pdf.py  spell_check.py  third_party_router.py  users.py  users_backup.py
backend/app/schemas/: __init__.py  category.py  custom_dictionary.py  document.py  document_recovery.py  github.py  github_save.py  github_settings.py  icon_schemas.py  user.py
backend/app/services/: css_service.py  database_outbox.py  document_icon_updater.py  github_background_sync.py  github_cache_service.py  github_import_service.py  github_pr_service.py  github_service.py  github_sync_service.py  icon_pack_installer.py  icon_service.py  iconify_browser_service.py  markdown_lint_rule.py  pdf_image_processor.py  pdf_processor.py  pdf_service_client.py  spell_check_service.py  standardized_icon_installer.py  svgl_browser_service.py  syntax_highlighting.py  third_party_browser_service.py  unified_document.py  unified_git_operations.py  user_service_outbox.py
backend/app/utils/: datetime_helpers.py
backend/migrations/: env.py  migration_helpers.py
backend/migrations/versions/: 0450cbd56879_initial_migration.py  08b221d47b00_drop_icon_count_column_from_icon_packs.py  0cc093a64efe_add_password_reset_fields_to_users.py  152772010005_add_identity_schema_and_outbox_table.py  25784be2625f_add_github_settings_table.py  2a1b3c4d5e6f_add_user_settings_fields.py  3947d03d36fd_add_folder_path_to_documents_and_custom_.py  3cedb82262e2_remove_document_recovery_table.py  3e8b51b52200_initial_migration_with_all_models.py  44ec2b276844_initial_migration_with_current_structure.py  4c62504c524d_create_linting_schema_and_tables.py  4ce8da2733ee_add_last_sync_field_to_github_account_.py  5417dceecb6e_create_markdown_lint_rules_table_proper.py  5577969e037f_add_phase_2_github_fields.py  60f546c19fc4_add_editor_width_percentage_to_users.py  63b273275d1f_convert_full_key_to_computed_hybrid_.py  74f38b18377a_add_image_metadata_field_to_documents.py  857f921cccd9_add_last_opened_at_to_documents.py  86770e62ceb7_add_github_integration_models.py  8821a39ebdc7_add_custom_dictionary_table.py  8821a39ebdc7_initial_migration_with_all_models.py  8c02283bf88e_add_document_sharing_fields.py  8c240984c488_initial_migration.py  8e053a703637_fix_document_uniqueness_constraints.py  8f3a2c1d7b4a_add_document_recovery_table.py  99d190ed73e6_add_github_integration_complete.py  add_user_settings_fields.py  ddcf7fb1764b_merge_linting_schema_and_event_ledger_.py  ea46fcfc2563_add_mfa_fields_to_users.py  eca1483c944a_remove_content_field_and_add_filesystem_.py  fa1366ffffa3_add_github_repository_selection_system.py
backend/scripts/: analyze_filesystem_consistency.py  check_mfa.py  cleanup_orphaned_files.py  entrypoint.sh  scan_filesystem.py  test-coverage.sh  test_document_methods.py  test_folder_crud.py
backend/tests/: conftest.py  test_auth.py  test_categories.py  test_category_crud.py  test_category_crud_simple.py  test_database.py  test_folder_api.py  test_health.py  test_integration.py  test_mfa_workflow.py  test_monitoring.py  test_pdf.py  test_public.py  test_syntax_highlighting.py  test_unified_git_operations.py
backend/tests/e2e/: README.md  conftest.py  run_e2e_tests.py  run_tests.py  test_production.py  test_specialized_services.py
backend/tests/fixtures/: application.py  data.py  database.py
css/: styles.css  (+1 more)
export-service/: Dockerfile  README.md  markdown-manager-export.service  playwright-base.Dockerfile  pyproject.toml  pytest.ini
export-service/app/: __init__.py  app_factory.py  main.py  models.py
export-service/tests/: __init__.py  test_architecture_converter.py  test_architecture_parser.py  test_converter_factory.py  test_diagram_detector.py  test_drawio_quality_service.py  test_drawio_router.py  test_mermaid_drawio_service.py  test_performance_and_edge_cases.py
pdf-service/: Dockerfile  markdown-manager-pdf.service  pyproject.toml
pdf-service/app/: main.py
services/embedding/: .dockerignore  Dockerfile  pyproject.toml
services/event-consumer/: Dockerfile  TESTING.md  main.py  pyproject.toml
services/event-publisher/: Dockerfile  README.md  main.py  markdown-manager-event-publisher.service  pyproject.toml
(+1874 files in other folders)
