[tool.poetry]
name = "export-service"
version = "0.2.0"
description = "Export service for PDFs and diagrams using Playwright"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
playwright = "^1.49.1"
pydantic = "^2.10.4"
httpx = "^0.28.1"
aiofiles = "^24.1.0"
lxml = "^6.0.2"
beautifulsoup4 = "^4.14.2"
pillow = "^12.0.0"
cairosvg = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
deptry = "^0.23.1"

[tool.deptry]
# Ignore specific unused dependencies that are used implicitly
per_rule_ignores = { "DEP002" = ["uvicorn"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
