[tool.poetry]
name = "pdf-service"
version = "0.1.0"
description = "Standalone PDF generation service using Playwright"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
playwright = "^1.49.1"
pydantic = "^2.10.4"
httpx = "^0.28.1"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
