[tool.poetry]
name = "consumer-service-base"
version = "0.1.0"
description = "Configurable Redis Streams consumer base service"
authors = ["Markdown Manager <dev@markdownmanager.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
psycopg = {extras = ["binary"], version = "^3.1.13"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
# events-core will be installed directly during Docker build

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
aiosqlite = "^0.19.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration test",
    "unit: mark test as unit test",
    "redis: mark test as requiring Redis",
    "database: mark test as requiring database"
]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"