[tool.poetry]
name = "relay-service"
version = "1.0.0"
description = "Outbox pattern relay service for markdown-manager"
authors = ["markdown-manager"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
psycopg = {extras = ["binary"], version = "^3.1.0"}
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"